<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    android:hapticFeedbackEnabled="true"
    tools:context=".ShoppingCartActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="40dp"
        android:layout_height="33dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="112dp"
        android:backgroundTint="#FF0202"
        android:text="@string/button2"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/quatityinput2"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/quatityinput2"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/Quantity"
        app:layout_constraintTop_toBottomOf="@+id/quatityinput"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/Shopping_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="159dp"
        android:text="@string/Shopping_cart"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="120dp"
        android:text="@string/product1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Shopping_cart" />

    <TextView
        android:id="@+id/quantity1"
        android:layout_width="84dp"
        android:layout_height="27dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="120dp"
        android:text="@string/quantity1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/product1"
        app:layout_constraintTop_toBottomOf="@+id/Shopping_cart" />

    <TextView
        android:id="@+id/product2"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="120dp"
        android:text="@string/product2"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product1" />

    <TextView
        android:id="@+id/Quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="120dp"
        android:text="@string/quantity2"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/product2"
        app:layout_constraintTop_toBottomOf="@+id/quantity1" />

    <EditText
        android:id="@+id/quatityinput"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/button1"
        app:layout_constraintStart_toEndOf="@+id/quantity1"
        app:layout_constraintTop_toBottomOf="@+id/Shopping_cart"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button1"
        android:layout_width="40dp"
        android:layout_height="33dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="#DD0707"
        android:text="@string/button1"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quatityinput"
        app:layout_constraintTop_toBottomOf="@+id/Shopping_cart"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/Sub_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="100dp"
        android:text="@string/Sub_total"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Quantity" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="70dp"
        android:layout_height="26dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/Sub_total"
        app:layout_constraintTop_toBottomOf="@+id/quatityinput2"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="85dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:onClick="checkOut"
        android:text="@string/button4"
        android:textColor="#FFFFFF"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>